hack/istio/bookinfo-details-abort-multicode.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-abort-mc-vs
spec:
  hosts:
  - details
  http:
  - match:
    - headers:
        x-request-id:
          regex: "^[1234].*"
    route:
      - destination:
          host: details
          subset: details-abort-dr-subset-v1
    fault:
      abort:
        httpStatus: 333
        percentage:
          value: 100
  - match:
    - headers:
        x-request-id:
          regex: "^[5678].*"
    route:
      - destination:
          host: details
          subset: details-abort-dr-subset-v1
    fault:
      abort:
        httpStatus: 444
        percentage:
          value: 100
  - match:
    - headers:
        x-request-id:
          regex: "^[90ab].*"
    route:
      - destination:
          host: details
          subset: details-abort-dr-subset-v1
    fault:
      abort:
        httpStatus: 555
        percentage:
          value: 100
  - route:
    - destination:
        host: details
        subset: details-abort-dr-subset-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-abort-dr
spec:
  host: details
  subsets:
  - name: details-abort-dr-subset-v1
    labels:
      version: v1
