hack/istio/bookinfo-mlts-details.yaml
# Necessary resources that enable mTLS when talking to details service.

# Instruct senders to talk mTLS to details.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-mtls
spec:
  host: details
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
