hack/istio/bookinfo-mlts-mongodb.yaml
# Necessary resources that enable mTLS when talking to details service.

# Instruct senders to talk mTLS to details.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mongodb-mtls
spec:
  host: mongodb
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
