hack/istio/bookinfo-reviews-all-cb.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: circuitbreaker-reviews-all-cb
spec:
  host: reviews
  trafficPolicy:
    outlierDetection:
      http:
        consecutiveErrors: 1
        interval: 1s
        baseEjectionTime: 10s
        maxEjectionPercent: 100
